--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "bower install && rm -rf public && grunt build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm build"
   },
   "author": "cat-in-136",
   "license": "MIT",
