--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "bower": "~1.7.9",
     "grunt": "~1.0.1",
+    "grunt-contrib-clean": "~1.0.0",
     "grunt-contrib-copy": "~1.0.0",
     "grunt-babel": "~6.0.0",
     "babel-preset-es2015": "~6.9.0",
