--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bower": "~1.7.9",
     "grunt": "~1.0.1",
     "grunt-contrib-clean": "~1.0.0",
+    "grunt-contrib-concat": "~1.0.1",
     "grunt-contrib-copy": "~1.0.0",
     "grunt-babel": "~6.0.0",
     "babel-preset-es2015": "~6.9.0",
