--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "issue-maps-classic",
   "version": "0.0.0",
-  "description": "",
+  "description": "classical style implementation of diffshare/issue-maps",
   "main": "index.js",
   "scripts": {
     "init": "grunt init",
     "build": "grunt build",
     "test": "npm build"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cat-in-136/issue-maps-classic.git"
   },
   "author": "cat-in-136",
   "license": "MIT",
