--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "classical style implementation of diffshare/issue-maps",
   "main": "index.js",
   "scripts": {
+    "clean": "grunt clean",
     "init": "grunt init",
     "build": "grunt build",
+    "zip": "grunt compress",
     "test": "npm build"
   },
   "repository": {
@@ -23,6 +25,7 @@
     "grunt-babel": "~6.0.0",
     "babel-preset-es2015": "~6.9.0",
     "grunt-contrib-watch": "~1.0.0",
-    "grunt-contrib-connect": "~1.0.2"
+    "grunt-contrib-connect": "~1.0.2",
+    "grunt-contrib-compress": "~1.3.0"
   }
 }
