--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
     "babel-preset-es2015": "~6.24.0",
     "grunt-contrib-watch": "~1.0.0",
     "grunt-contrib-connect": "~1.0.2",
-    "grunt-contrib-compress": "~1.4.0"
+    "grunt-contrib-compress": "1.4.1"
   }
 }
