--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "grunt-contrib-clean": "~1.1.0",
     "grunt-contrib-concat": "~1.0.1",
     "grunt-contrib-copy": "~1.0.0",
-    "grunt-babel": "~6.0.0",
+    "grunt-babel": "~7.0.0",
     "babel-preset-es2015": "~6.24.0",
     "grunt-contrib-watch": "~1.0.0",
     "grunt-contrib-connect": "~1.0.2",
-    "grunt-contrib-compress": "1.4.1"
+    "grunt-contrib-compress": "~1.4.3"
   }
 }
