--- a/package.json
+++ b/package.json
@@ -18,14 +18,16 @@
   "author": "cat-in-136",
   "license": "MIT",
   "devDependencies": {
-    "grunt": "~1.0.1",
-    "grunt-contrib-clean": "~1.1.0",
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "babel-core": "^7.0.0-bridge.0",
+    "grunt": "^1.3.0",
+    "grunt-babel": "^8.0.0",
+    "grunt-contrib-clean": "~2.0.0",
+    "grunt-contrib-compress": "~1.6.0",
     "grunt-contrib-concat": "~1.0.1",
+    "grunt-contrib-connect": "~3.0.0",
     "grunt-contrib-copy": "~1.0.0",
-    "grunt-babel": "~7.0.0",
-    "babel-preset-es2015": "~6.24.0",
-    "grunt-contrib-watch": "~1.0.0",
-    "grunt-contrib-connect": "~1.0.2",
-    "grunt-contrib-compress": "~1.4.3"
+    "grunt-contrib-watch": "^1.1.0"
   }
 }
