--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "grunt-contrib-compress": "~2.0.0",
     "grunt-contrib-concat": "~1.0.1",
     "grunt-contrib-connect": "~3.0.0",
-    "grunt-contrib-copy": "~1.0.0",
-    "grunt-contrib-watch": "^1.1.0"
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-text-replace": "^0.4.0"
   }
 }
