--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,10 +4,6 @@
 name: Node.js CI
 
 on: [push, pull_request]
-#  push:
-#    branches: [ $default-branch ]
-#  pull_request:
-#    branches: [ $default-branch ]
 
 jobs:
   build:
@@ -26,4 +22,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm run build --if-present
+      env:
+        GOOGLE_API_KEY: GOOGLE_API_KEY
     - run: npm test
