--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm run build --if-present
+      env:
+        GOOGLE_API_KEY: GOOGLE_API_KEY
     - run: npm run zip
     - name: Create Release
       id: create_release
